<resources>
    <!-- Shared preferences names -->
    <string name="user_info_pref">pt.ulisboa.tecnico.meic.sirs.smartrestaurant.USER_INFO_PREF</string>
    <string name="cookie_pref">pt.ulisboa.tecnico.meic.sirs.smartrestaurant.COOKIE_PREF</string>
    <string name="user_info_email">pt.ulisboa.tecnico.meic.sirs.smartrestaurant.USER_INFO_EMAIL</string>
    <string name="user_info_username">pt.ulisboa.tecnico.meic.sirs.smartrestaurant.USER_INFO_USERNAME</string>
    <string name="user_info_first_name">pt.ulisboa.tecnico.meic.sirs.smartrestaurant.USER_INFO_FIRST_NAME</string>
    <string name="user_info_last_name">pt.ulisboa.tecnico.meic.sirs.smartrestaurant.USER_INFO_LAST_NAME</string>
    <string name="user_info_nif">pt.ulisboa.tecnico.meic.sirs.smartrestaurant.USER_INFO_NIF</string>
    <!-- End shared preferences names -->

    <string name="app_name">Smart Restaurant</string>
    <string name="settings">Settings</string>
    <string name="lorem_ipsum">Sugar plum sugar plum gummies donut jelly powder. Icing muffin cheesecake liquorice wafer bonbon. Bonbon tootsie roll halvah. Lollipop macaroon bear claw chocolate cake. Chocolate bar gummi bears candy cheesecake icing oat cake. Cake chocolate cake liquorice pie. Donut halvah lollipop. Bear claw lollipop sweet roll cookie dragée dragée donut candy. Cheesecake liquorice marzipan dragée muffin chocolate dessert jujubes. Cupcake ice cream tootsie roll bonbon croissant gingerbread ice cream danish. Jelly beans donut jujubes sugar plum. Tootsie roll tiramisu chupa chups dragée cheesecake brownie chocolate bar chocolate bar icing. Apple pie cake carrot cake gingerbread candy canes</string>
    <string name="menu_item_more_info">More Info</string>
    <string name="menu_item_calories">Total calories</string>
    <string name="menu_item_calories_unit">Kcal</string>
    <string name="menu_item_ingredients">Ingredients</string>

    <string-array name="payment_method">
        <item>PayPal</item>
        <item>Cash</item>
    </string-array>

    <string name="loading">Loading…</string>
    <string name="mobile_data">Cannot connect to network. Please make sure data is enabled before you start the application.</string>

    <string name="tab_one">Appetizers</string>
    <string name="tab_two">Main Courses</string>
    <string name="tab_three">Desserts</string>
    <string name="currency_symbol">€</string>
    <string name="currency_short">EUR</string>

    <!-- Menu Item Detail -->
    <string name="menu_item_price">Price</string>
    <string name="menu_item_description">Description</string>


    <string name="samples_title">Hello name</string>
    <string name="samples_subhead">Hello Subhead</string>
    <string name="samples_hint_username">Username</string>
    <string name="samples_hint_email">E-Mail</string>


    <string name="navigation_title">Smart Restaurant</string>
    <string name="navigation_restaurant_menu">Menu</string>
    <string name="navigation_cart">My Order</string>
    <string name="navigation_account">Account Details</string>
    <string name="navigation_sub_items">Sub items</string>
    <string name="navigation_dummy_item_1">Dummy item 1</string>
    <string name="navigation_dummy_item_2">Dummy item 2</string>
    <string name="title_activity_delete">DeleteActivity</string>
    <string name="no_network_connection_icon">No network connection detected</string>
    <string name="no_connection_detected">No connection detected</string>
    <string name="please_connect">Please connect to a network and restart the application</string>

    <string name="signup_header">User Registration</string>
    <string name="signup_header_description">Please enter the requested information</string>
    <string name="signup_credentials_header">Your login credentials</string>
    <string name="your_email_address">E-mail address</string>
    <string name="your_username">Username</string>
    <string name="your_password">Password</string>
    <string name="signup_invoice_info_header">Your invoice information</string>
    <string name="your_first_name">First name</string>
    <string name="your_last_name">Last name</string>
    <string name="your_vat_id">VAT Identification Number (NIF)</string>
    <string name="activity_payment_method_proceed">Proceed</string>
    <string name="activity_payment_method_cash">Cash</string>
    <string name="activity_payment_method_paypal">Paypal</string>
    <string name="activity_payment_method_header">How would you like to pay?</string>
    <string name="pay_with_paypal">Pay with PayPal</string>
    <string name="pay_with_cash">Pay with Cash</string>
    <string name="hooray">Hooray!</string>
    <string name="order_successful">Your order has been successfully registered and is now being prepared.\n\n Enjoy your meal! :-)</string>
    <string name="go_to_menu">Go to Menu</string>


</resources>
