<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_restaurant_menu"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/navigation_restaurant_menu" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/navigation_cart" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/navigation_account" />
    </group>
    <item android:title="@string/navigation_sub_items">
        <menu>
            <item
                android:icon="@drawable/ic_dashboard"
                android:title="@string/navigation_dummy_item_1" />
            <item
                android:icon="@drawable/ic_dashboard"
                android:title="@string/navigation_dummy_item_2" />
        </menu>
    </item>

</menu>
