<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:id="@+id/scan_qr_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_network_check_black_48dp"
                    android:contentDescription="@string/no_network_connection_icon"
                    android:tint="@color/theme_primary_dark"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_connection_detected"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/please_connect"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>